[gd_scene load_steps=4 format=3 uid="uid://dkaq5i1gngwvn"]

[ext_resource type="Script" path="res://Scripts/ContinueButton.gd" id="1_dtxau"]
[ext_resource type="Script" path="res://Scripts/SaveGame.gd" id="2_3bgma"]
[ext_resource type="Script" path="res://Scripts/ExitToMainMenu.gd" id="2_b48em"]

[node name="PauseUI" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -343.0
offset_right = 250.0
offset_bottom = 383.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="PauseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Continue"
script = ExtResource("1_dtxau")

[node name="SaveButton" type="Button" parent="VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Save Game"
script = ExtResource("2_3bgma")

[node name="WaveActiveNotifier" type="Label" parent="VBoxContainer/SaveButton"]
visible = false
layout_mode = 0
offset_left = 59.0
offset_top = 111.0
offset_right = 440.0
offset_bottom = 148.0
theme_override_font_sizes/font_size = 24
text = "Can't save while a wave is active!"

[node name="Control" type="Control" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.1

[node name="QuitButton" type="Button" parent="VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit to Main Menu"
script = ExtResource("2_b48em")

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="VBoxContainer/ContinueButton" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="VBoxContainer/SaveButton" method="_on_ingame_save_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="VBoxContainer/QuitButton" method="_on_pressed"]
